# traffic-risk-assessment

./: .dockerignore  .editorconfig  .env.cloud  .env.example  .flake8  .gitignore  Makefile  README.md  command.txt  docker-compose.yaml  docker-compose.yml  guide.md  pyproject.toml  requirements-spark.txt  requirements.txt
.github/workflows/: ci-cd.yaml  ci-cd.yml
config/: app.yaml  streaming.yaml
config/monitoring/: blackbox.yml  prometheus.cloud.yml  prometheus.cloud.yml.template  prometheus.local.yml
config/spark/: log4j2.properties  spark-defaults.conf
dashboard/backend/: Dockerfile  main.py  requirements.txt
dashboard/frontend/: index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json
data/: split_data.py
deployment/gcp/: create-vms.sh  manage-nodes.sh  startup-node1.sh  startup-node2.sh  startup-node3.sh
deployment/node1-control/: .env.example  docker-compose.yaml  docker-compose.yml  mlflow.Dockerfile  setup.sh
deployment/node2-streaming/: Dockerfile.flink  docker-compose.yaml  docker-compose.yml  setup.sh
deployment/node3-batch/: docker-compose.yaml  docker-compose.yml  setup.sh
docs/: api.md  backend.md  capstone-charter.md  data-dictionary.md  data-lake-layers.md  database.md  infrastructure-inventory.md  intro.md  notion.txt  pipeline.md  report.md  run.md  services.md  tomtom_dataset_analysis.md
docs/streaming/: implementation_summary.md
ingestion/batch/: load_to_gcs.py
ingestion/kafka/: schema_registry.py  tomtom_producer.py  us_producer.py
makefile/gcp/: Makefile
makefile/local/: Makefile
ml/: comparision.md  kaggle_5_vs_h2o_before_2020.md
ml/dataset/: dataset_offline.py
ml/notebooks/: eda.ipynb  eda.md
ml/training/: h2o_after_2020.py  h2o_before_2020.py  kaggle_5_before_2020.py  train_after_2020.py  train_before_2020.py  train_h2o_offline.py  train_h2o_online.py
monitoring/: Dockerfile  pipeline_exporter.py
orchestration/dags/: dag_batch_etl.py  dag_hotspot_update.py  dag_ml_pipeline.py  dag_model_retrain.py  dag_smoke_test.py  dag_stream_replay_monitor.py  dag_tomtom_ingestion.py
processing/: __init__.py  feature_engineering.py  flink_streaming.py  flink_tomtom_streaming.py  spark_batch.py  streaming_enrichment.py  tomtom_realtime_consumer.py
processing/flink/: geo_enricher.py  sink_to_postgis.py  smoke_postgis_sink.py
processing/spark/: Dockerfile  __init__.py
schemas/: accident_event.avsc  enriched_risk.avsc  tomtom_incident.avsc
scripts/: backup_checkpoints.sh  data_quality_check.py  manage-nodes.sh  setup_gcp.ps1  setup_gcp.sh
serving/: main.py
shared/: __init__.py  risk_scoring.py
simulation/: engine.py  whatif_service.py
tests/: test_smoke.py
(+132 files in other folders)
