[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = ".git,__pycache__,.venv,venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
