[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "road-accident-risk-platform"
version = "0.1.0"
description = "Kafka, Flink, Spark, Airflow, H2O, and MLflow pipeline for road accident risk analysis."
requires-python = ">=3.10,<3.13"
dependencies = [
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-google>=10.0.0",
    "apache-airflow-providers-postgres>=5.0.0",
    "apache-flink==1.19.0",
    "confluent-kafka>=2.3.0",
    "fastapi>=0.110.0",
    "gcsfs>=2024.3.1",
    "google-auth>=2.23.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.14.0",
    "h2o>=3.42.0.2",
    "matplotlib>=3.8.0",
    "mlflow==2.12.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
    "prometheus-client>=0.19.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=14.0.0",
    "pyspark>=3.5.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "setuptools>=68.0.0,<81.0.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "flake8==7.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = ".git,__pycache__,.venv,venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
